--- a/src/gui/cra/CRA_UI0003_STOCK_LOCATIONS.form
+++ b/src/gui/cra/CRA_UI0003_STOCK_LOCATIONS.form
@@ -73,7 +73,7 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="9" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="msg_lbl" min="-2" pref="22" max="-2" attributes="0"/>
@@ -572,7 +572,7 @@
                           <Component id="btn_export_excel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="11" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
